--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "axios": "^1.3.6",
+    "basiclightbox": "^5.0.4",
     "caniuse-lite": "^1.0.30001481",
     "firebase": "^9.19.1",
-    "axios": "^1.3.6",
     "modern-normalize": "^1.1.0",
     "tui-pagination": "^3.4.1"
   },
