--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "caniuse-lite": "^1.0.30001481",
     "firebase": "^9.19.1",
     "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.13.0",
     "tui-pagination": "^3.4.1"
   },
   "devDependencies": {
