--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://szymoncierpik.github.io/filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /filmoteka/"
+    "build": "parcel build src/*.html"
   },
   "repository": {
     "type": "git",
